recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:17: error: not found: value squreSide
		case _ => squreSide(levels-1,length/4);
                          ^