recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.code
def snowSquare (levels:Int, length:Double) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
def squareSide(levels:Int, length:Double) {
  levels match{
		case 0 => avance(length);
		case _ => squreSide(levels-1,length/4);
							gauche(60);
							squareSide(levels-1,length/4);
							droite(120);
							squareSide(levels-1,length/4);
							gauche(60);
							squareSide(levels-1,length/4);		
		}
}